--- a/css/common.css
+++ b/css/common.css
@@ -34,11 +34,14 @@
     padding: 32px 12px;
     display: block;
     line-height: 28px;
+    text-decoration: none;
 }
 .gnav-list:hover{
     height:29px;
     background-color: rgba(255,255,255);
-    opacity: 0.5 ;
+    opacity: 0.5;
+    text-decoration: underline;
+
 }
 li{
     padding: 10px;
@@ -67,6 +70,7 @@ li{
     margin:0 auto;
 }
 .entries-title{
+    font-weight: normal;
     font-size: 24px;
     padding:24px 0;
     margin:30px;
@@ -77,12 +81,42 @@ li{
     border-color:#DFDFDF;
 }
 .entry{
+    color: #fff;
     max-width: 200px;
     display: flex;
     flex-direction: column-reverse;
     margin:10px;
     align-items: flex-start;
+    position:relative;
 }
+.entry:before {
+    content: 'No.1';
+    position: absolute;
+    opacity: 0.7;
+    background-color: #47442F;
+    top:0px;
+    left: 0px;
+    padding: 8px;
+}
+.entry:nth-child(1):before{
+    content: 'No.1';
+    background-color: #D6B083;
+}
+.entry:nth-child(2):before{
+    content: 'No.2';
+    background-color: #BFC4C9;
+}
+.entry:nth-child(3):before{
+    content: 'No.3';
+    background-color: #B9704E;
+}
+.entry:nth-child(4):before{
+    content: 'No.4';
+}
+.entry:nth-child(5):before{
+    content: 'No.5';
+}
+
 .entry img{
     width:100%;
     display: block;
@@ -116,6 +150,7 @@ li{
     color:#fff;
     background-color: #2D3541;
     position: relative;
+    z-index: 3;
 }
 .content-title:after{
     content: '';
@@ -130,27 +165,82 @@ li{
     border-top:10px solid #2D3541;
     border-left: 30px solid transparent;
     border-right: 30px solid transparent;
-    
 }
 .sub{
     font-size:16px;
 }
-.feature{
+.feature {
     background-color: #fff;
+    position: relative;
+    display: flex;
+    height: 550px;
+    flex-direction: column;
+    justify-content: center;
+    border: 1px solid red;
 }
-.feature-image{
-    margin:0 0 24px;
+.feature:nth-child(even){
+    padding-right: 600px;
+}
+.feature:nth-child(odd){
+    padding-left: 600px;
 }
 .feature-title{
-    color: #35B282;
-    font-size:32px;
-    font-weight: 200;
-    position: relative;
+    font-weight: normal;
+    font-size: 32px;
+    padding-top: 18px;
+    color:#3CA78C;
+    margin-top: 16px;
+    margin-bottom: 16px;
 }
 .feature-sub{
-    font-size:16px;
+    display: block;
+    font-size: 16px;
     font-weight: normal;
-    text-align: left;
-    padding:40px 12px 8px;
-    margin:0 0 32px;
 }
+.featuere-image{
+    position: absolute;
+    top:0;
+}
+.featuere-image{
+    height: 400px;
+}
+.feature-item{
+    margin:16px;
+    height: 400px;
+    
+}
+.feature:nth-child(even) .featuere-image{
+    right: 0;
+}
+.feature:nth-child(odd) .featuere-image{
+    left:0;
+}
+.btn-orange{
+    width:200px;
+    font-size:18px;
+    text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    font-weight:normal;
+    text-decoration:none;
+    display:block;
+    text-align:center;
+    padding:8px 0 8px;
+    color:#fff;
+    background-color:#FB5509;
+    border-radius:5px;
+}
+.btn-orange:link{
+    color: #fff;
+}
+.btn-orange:visited{
+    color:#fff;
+}
+.btn-orange:hover{
+    height: 25px;
+    background-color: rgba(255,255,255);
+    opacity: 0.2;
+    text-decoration: underline;
+}
+.btn-orange:no-color-change {
+    color: blue;
+}
+
