--- a/css/common.css
+++ b/css/common.css
@@ -173,28 +173,37 @@ li{
     background-color: #fff;
     position: relative;
     display: flex;
-    height: 550px;
+    height: 533px;
     flex-direction: column;
     justify-content: center;
-    border: 1px solid red;
 }
-.feature:nth-child(even){
-    padding-right: 600px;
+
+.feature:nth-child(odd) .feature-group {
+    padding-left: 850px;
+    margin:20px;
+}
+.feature:nth-child(even) .feature-group {
+    padding-left: 250px;
+    margin;20px;
 }
 .feature:nth-child(odd){
-    padding-left: 600px;
+    background-color: #F9F9F9;
+}
+.feature-group{
+    max-width: 600px;
 }
 .feature-title{
     font-weight: normal;
-    font-size: 32px;
+    font-size: 38px;
     padding-top: 18px;
     color:#3CA78C;
     margin-top: 16px;
     margin-bottom: 16px;
 }
 .feature-sub{
+    margin-top:8px;
     display: block;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: normal;
 }
 .featuere-image{
@@ -205,9 +214,10 @@ li{
     height: 400px;
 }
 .feature-item{
-    margin:16px;
-    height: 400px;
-    
+    margin:20px;
+    margin-left: 0px;
+    height: 100px;
+    width:550px;
 }
 .feature:nth-child(even) .featuere-image{
     right: 0;
@@ -217,30 +227,86 @@ li{
 }
 .btn-orange{
     width:200px;
-    font-size:18px;
+    height: 28px;
+    font-size:15px;
     text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
     font-weight:normal;
     text-decoration:none;
-    display:block;
+    display:inline-block;
     text-align:center;
     padding:8px 0 8px;
     color:#fff;
     background-color:#FB5509;
     border-radius:5px;
+    transition: 0.5s
 }
-.btn-orange:link{
+a:link, a:visited, a:hover, a:active {
     color: #fff;
+    text-decoration: none;
+    display: block;
 }
-.btn-orange:visited{
-    color:#fff;
-}
-.btn-orange:hover{
-    height: 25px;
-    background-color: rgba(255,255,255);
-    opacity: 0.2;
-    text-decoration: underline;
+.btn-orange:hover {
+    height: 28px;
+    background-color: rgb(255,164,105);
+    text-decoration: none;
+    display: block;
 }
 .btn-orange:no-color-change {
     color: blue;
 }
+.service-item{
+    display: flex;
+}
+.custmoize{
+    height: 300px;
+    display: block;
+    padding-left: 300px;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+.custmoize feature-sub{
+    margin:20px;
+}
+.Consulting{
+    height: 300px;
+    margin-right:0px;
+    display: block;
+    padding-left: 500px;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+.contents-title{
+    font-weight: normal;
+    color:#3CA78C;
+    font-size:38px;
+}
+.btn-green{
+    background-color: #3AA187;
+    width:200px;
+    height: 28px;
+    font-size:15px;
+    text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    font-weight:normal;
+    text-decoration:none;
+    display:inline-block;
+    text-align:center;
+    padding:8px 0 8px;
+    color:#fff;
+    border-radius:5px;
+    transition: 0.5s
+    margin-top:40px;
+}
+a:link, a:visited, a:hover, a:active{
+    color: #fff;
+    text-decoration: none;
+    display: block;
+}
+.btn-green:hover{
+    height: 28px;
+    background-color: rgb(96,188,125);
+    text-decoration: none;
+    display: block;
+}
+
+
 
