--- a/css/common.css
+++ b/css/common.css
@@ -14,6 +14,10 @@
     font-size: 24px;
     margin: 0 10px;
     padding:27px;
+    display: block;
+}
+.title:hover{
+    text-decoration: underline;
 }
 .gnav{
     position: absolute;
@@ -37,11 +41,10 @@
     text-decoration: none;
 }
 .gnav-list:hover{
-    height:29px;
-    background-color: rgba(255,255,255);
-    opacity: 0.5;
-    text-decoration: underline;
-
+    display: inline-block;
+    background-color: rgba(93,175,140);
+    text-decoration: none;
+    transition: 0.7s;
 }
 li{
     padding: 10px;
@@ -139,6 +142,16 @@ li{
     justify-content: center;
     /*flex-wrap: wrap;*/
 }
+@media screen and (max-width:680px) { 
+    .entry-container {
+        display: block;
+    }
+    .entry {
+        margin: 0 16px 16px;
+        max-width: none;
+        border: 1px solid #ccc;
+    }
+}
 .content-title{
     display: flex;
     font-size:24px;
@@ -170,54 +183,55 @@ li{
     font-size:16px;
 }
 .feature {
-    background-color: #fff;
     position: relative;
+    height: 540px;
     display: flex;
-    height: 533px;
     flex-direction: column;
     justify-content: center;
+    border-bottom-color: rgb(219, 219, 219);
 }
 
-.feature:nth-child(odd) .feature-group {
-    padding-left: 850px;
-    margin:20px;
+.feature:nth-child(odd) {
+    padding-left: 900px;
+    border: 2px solid #111;
 }
-.feature:nth-child(even) .feature-group {
-    padding-left: 250px;
-    margin;20px;
+.feature:nth-child(even) {
+    padding-right: 900px;
 }
 .feature:nth-child(odd){
     background-color: #F9F9F9;
 }
 .feature-group{
-    max-width: 600px;
+    border: 1px solid red;
 }
 .feature-title{
+    padding-top: 16px;
+    margin-left: 120px;
+    font-size: 32px;
+    color: #47B39D;
     font-weight: normal;
-    font-size: 38px;
-    padding-top: 18px;
-    color:#3CA78C;
-    margin-top: 16px;
-    margin-bottom: 16px;
 }
 .feature-sub{
-    margin-top:8px;
     display: block;
+    font-size: 14px;
     font-size: 14px;
     font-weight: normal;
 }
 .featuere-image{
     position: absolute;
-    top:0;
+    top: 0;
 }
 .featuere-image{
-    height: 400px;
+    height: auto;
+    width: auto;
+    border: 1px solid blue;
 }
-.feature-item{
-    margin:20px;
-    margin-left: 0px;
-    height: 100px;
-    width:550px;
+.feature-item {
+    margin-left: 120px;
+    padding-right: 100px;
+    margin-top: 36px;
+    margin-bottom: 36px;
+    color: rgb(71, 71, 71);
 }
 .feature:nth-child(even) .featuere-image{
     right: 0;
@@ -225,17 +239,40 @@ li{
 .feature:nth-child(odd) .featuere-image{
     left:0;
 }
+@media screen and (max-width:1100px) {
+    .feature {
+        display: none;
+        height: auto;
+        text-align: center;
+    }
+    .feature:nth-child(odd) .feature-group{
+        padding: 0;
+    }
+    .feature:nth-child(even) .feature-group{
+        padding: 0;
+    }
+    .feature-item {
+        text-align: left;
+    }
+    .feature-img {
+        position: static;
+        width: auto;
+    }
+    .feature-image img {
+        width: 100%;
+    }
+}
 .btn-orange{
     width:200px;
-    height: 28px;
+    padding:10px;
     font-size:15px;
     text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
     font-weight:normal;
     text-decoration:none;
     display:inline-block;
     text-align:center;
-    padding:8px 0 8px;
     color:#fff;
+    margin-left: 120px;
     background-color:#FB5509;
     border-radius:5px;
     transition: 0.5s
@@ -246,7 +283,7 @@ a:link, a:visited, a:hover, a:active {
     display: block;
 }
 .btn-orange:hover {
-    height: 28px;
+    padding: 10px;
     background-color: rgb(255,164,105);
     text-decoration: none;
     display: block;
@@ -254,59 +291,140 @@ a:link, a:visited, a:hover, a:active {
 .btn-orange:no-color-change {
     color: blue;
 }
-.service-item{
+.service-container{
     display: flex;
 }
-.custmoize{
-    height: 300px;
-    display: block;
-    padding-left: 300px;
-    margin-top: 16px;
-    margin-bottom: 16px;
-}
-.custmoize feature-sub{
-    margin:20px;
-}
-.Consulting{
-    height: 300px;
-    margin-right:0px;
-    display: block;
-    padding-left: 500px;
-    margin-top: 16px;
-    margin-bottom: 16px;
+.service-item{
+    width: 50%;
+    text-align: center;
+    padding: 80px 0;
+    border: 1px solid #eee;
 }
 .contents-title{
+    color: #3CA78C;
     font-weight: normal;
-    color:#3CA78C;
-    font-size:38px;
+    font-size: 40px;
+    padding-bottom: 40px;
+    margin-bottom: 24px;
 }
 .btn-green{
-    background-color: #3AA187;
-    width:200px;
-    height: 28px;
-    font-size:15px;
-    text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
-    font-weight:normal;
-    text-decoration:none;
-    display:inline-block;
-    text-align:center;
-    padding:8px 0 8px;
-    color:#fff;
-    border-radius:5px;
-    transition: 0.5s
-    margin-top:40px;
-}
-a:link, a:visited, a:hover, a:active{
-    color: #fff;
-    text-decoration: none;
-    display: block;
+    display: inline-block;
+    text-align: center;
+    background-color: #339979;
+    width:220px;
+    padding:10px;
+    border-radius: 4px;
 }
 .btn-green:hover{
-    height: 28px;
-    background-color: rgb(96,188,125);
+    padding: 10px;
+    background-color: rgb(156,251,168);
     text-decoration: none;
+    transition: 0.7s;
+    display: inline-block;
+}
+.table-item{
+    display: flex;
+    flex-wrap: wrap;
+    border-bottom: 1px solid #ccc;
+}
+.company-container{
+    padding-top:50px;
+    padding-bottom:50px;
+    padding-left:10px;
+    padding-right:10px;
+}
+.table-title {
+    width: 20%;
+    box-sizing: border-box;
+    padding: 24px 16px;
+    border-top: 1px solid #ccc;
+}
+.table-title:first-child {
+    border-top: 2px solid #47B39D;
+}
+.table-description {
+    width: 80%;
+    box-sizing: border-box;
+    padding: 24px 16px;
+    border-top: 1px solid #ccc;
+}
+.inquiry{
+    background-color: #47B39D;
+}
+.btn input,.btn a {
+    padding: 15px 75px;
     display: block;
+    color: #fff;
+    font-size:16px;
+    text-decoration: none;
+    border: none;
+    border-radius: 4px;
+    background-color: #111;
 }
 
-
+.inquiry .form {
+    padding: 40px 16px;
+    text-align: center;
+}
+.form-label {
+    margin-bottom: 4px;
+    color: #fff;
+}
+.form-value {
+    margin-bottom: 24px;
+}
+.form-value textarea,
+.form-value input {
+    padding: 8px;
+    width: 100%;
+    max-width: 600px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.form-value textarea {
+    height: 200px;
+}
+.footer{
+    background-color: #041125;
+    color:#fff;
+}
+.footer-list{
+    padding: 30px;
+}
+.footer-title{
+    font-size:20px;
+    padding: 30px;
+    border-bottom: solid 1px rgb(255,255,255,0.4);
+    overflow: hidden;
+}
+.footer-list{
+    margin: 24px 16px;
+    padding: 16px;
+    display: flex;
+}
+.footer-contenet{
+    padding: 8px;
+}
+.footer-value{
+    padding:12px;
+}
+.footer-label{
+    padding:12px;
+}
+.footer-list a:hover {
+    opacity: 0.6;
+}
+.footer-list-content a:before{
+    margin-right: 8px;
+    content: '';
+    display: inline-block;
+    width: 4px;
+    height: 4px;
+    position: relative;
+    top: -2px;
+    border-right: 2px solid #fff;
+    border-bottom: 2px solid #fff;
+    transform: rotate(-45deg);
+}
 
