--- a/css/common.css
+++ b/css/common.css
@@ -32,7 +32,6 @@
     text-align: center;
     flex-direction: row;
     margin:0px 0px 5px;
-    
 }
 .gnav-list{
     padding: 32px 12px;
@@ -42,8 +41,8 @@
 }
 .gnav-list:hover{
     display: inline-block;
-    background-color: rgba(93,175,140);
     text-decoration: none;
+    opacity: 0.6;
     transition: 0.7s;
 }
 li{
@@ -52,6 +51,50 @@ li{
 .gnav-title{
     display:none;
 }
+.gnav-cntrol{
+    position: absolute;
+    top: 0;
+    line-height: 92px;
+    background-color: #3B4552;
+    right: 20px;
+    font-size: 40px;
+    color: #fff;
+    text-align: center;
+    width: 92px;
+    display: none;
+    cursor: pointer;
+    
+}
+@media screen and (max-width:1000px) {
+    .gnav{
+        display: none;
+        left: 0;
+        top:92px;
+        background-color: #3B4552;
+    }
+    .gnav-item{
+        line-height: 64px;
+    }
+    .gnav-cntrol{
+        display: block;
+    }
+    .gnav:hover,
+    .gnav-cntrol:hover + .gnav{
+        display: flex;
+    }
+    .gnav-cntrol{
+        display: block;
+    }
+}
+@media screen and (max-width:480px) {
+    .gnav-item{
+        padding: 0px;
+    }
+    .gnav:hover,.gnav-cntrol:hover + .gnav {
+        display: block;
+    }
+}
+
 .main-areas{
     height:900px;
     background-color: #37A186;
@@ -119,7 +162,6 @@ li{
 .entry:nth-child(5):before{
     content: 'No.5';
 }
-
 .entry img{
     width:100%;
     display: block;
@@ -202,8 +244,7 @@ li{
     background-color: #F9F9F9;
 }
 .feature-group{
-    border: 1px solid red;
-}
+    }
 .feature-title{
     padding-top: 16px;
     margin-left: 120px;
@@ -239,9 +280,9 @@ li{
 .feature:nth-child(odd) .featuere-image{
     left:0;
 }
-@media screen and (max-width:1100px) {
+@media screen and (max-width:1000px) {
     .feature {
-        display: none;
+        display: block;
         height: auto;
         text-align: center;
     }
@@ -427,4 +468,5 @@ a:link, a:visited, a:hover, a:active {
     border-bottom: 2px solid #fff;
     transform: rotate(-45deg);
 }
+
 
